infra/k8s/backend/overlays/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: social-wallet-backend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  tls:
    - hosts:
        - api-dev.kobo.79.137.32.27.nip.io
      secretName: api-dev-kobo-tls
  rules:
    - host: api-dev.kobo.79.137.32.27.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: social-wallet-backend
                port:
                  number: 80
